--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-zeal": "^0.2.0",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.13.1",
+    "expect-react-shallow": "^1.1.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
