--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "redux-thunk": "^1.0.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "1.14.0",
     "whatwg-fetch": "^0.11.0"
