Add simple starter app
* Use a separate configuration for the “starter app”; it needs a
different webpack publicPath in order to work properly.
* Add a `starterapp` script to `package.json` for running the starter
app.
* Add a heading to the `App` component so that there’s something on the
page.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack-dev-server --config webpack/development.js --devtool eval --progress --colors --hot",
     "lint": "eslint client/*",
     "postinstall": "npm run build",
+    "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot",
     "test": "env NODE_PATH=$NODE_PATH:$PWD/client ./node_modules/.bin/mocha",
     "test:debug": "./node_modules/.bin/karma start test/karma.conf.js",
     "test:watch": "npm run test -- --watch"
