--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint client/*",
     "postinstall": "npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot",
-    "test": "env NODE_PATH=$NODE_PATH:$PWD/client ./node_modules/.bin/mocha",
-    "test:debug": "./node_modules/.bin/karma start test/karma.conf.js",
+    "test": "env NODE_PATH=$NODE_PATH:$PWD/client ./node_modules/.bin/mocha --opts client/__tests__/mocha.opts",
+    "test:debug": "./node_modules/.bin/karma start client/__tests__/karma.conf.js",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
