--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Zeal's React/Redux boilerplate setup",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production ./node_modules/.bin/webpack --config webpack/production.js",
-    "dev": "webpack-dev-server --config webpack/development.js --devtool eval --progress --colors --hot --history-api-fallback",
+    "build": "NODE_ENV=production ./node_modules/.bin/webpack",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --history-api-fallback",
     "lint": "eslint client/*",
     "postinstall": "npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
@@ -44,6 +44,7 @@
     "es6-promise": "^3.0.2",
     "eslint": "^2.1.0",
     "eslint-config-zeal": "^0.4.0",
+    "eslint-import-resolver-webpack": "^0.1.5",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.0.0-beta.0",
     "eslint-plugin-react": "^3.16.1",
