--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-router-named-routes": "0.0.7",
     "react-router-redux": "^2.1.0",
     "redux": "^3.1.0",
+    "redux-api-middleware": "^1.0.0-beta3",
     "redux-form": "^4.1.2",
     "redux-thunk": "^1.0.3",
     "sass-loader": "^3.1.2",
