--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "bootswatch": "^3.3.6",
     "chai": "^3.4.1",
     "css-loader": "^0.23.1",
     "css-modules-require-hook": "^2.1.0",
@@ -53,6 +52,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "flux-standard-action": "^0.6.0",
+    "foundation-apps": "^1.2.0",
     "history": "^1.17.0",
     "imports-loader": "^0.6.5",
     "karma": "^0.13.17",
@@ -66,7 +66,6 @@
     "ramda": "^0.19.1",
     "react": "^0.14.5",
     "react-addons-test-utils": "^0.14.5",
-    "react-bootstrap": "^0.28.1",
     "react-css-modules": "^3.6.3",
     "react-dom": "^0.14.5",
     "react-hot-loader": "^1.3.0",
