--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.4.1",
+    "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "css-modules-require-hook": "^2.1.0",
     "es6-promise": "^3.0.2",
