--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.5.2",
-    "babel-eslint": "^4.1.8",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
@@ -42,12 +42,12 @@
     "css-loader": "^0.23.1",
     "css-modules-require-hook": "^2.1.0",
     "es6-promise": "^3.0.2",
-    "eslint": "^2.2.0",
-    "eslint-config-zeal": "^0.5.1",
+    "eslint": "^2.4.0",
+    "eslint-config-zeal": "^0.6.0",
     "eslint-import-resolver-webpack": "^0.1.5",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-import": "^1.0.0-beta.0",
-    "eslint-plugin-react": "^4.1.0",
+    "eslint-plugin-import": "^1.1.0",
+    "eslint-plugin-react": "^4.2.3",
     "expect-react-shallow": "^1.1.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
