--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint 'client/**/*.js' && sass-lint -v",
     "postinstall": "npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
-    "test": "env NODE_PATH=$NODE_PATH:$PWD/client ./node_modules/.bin/mocha --opts client/__tests__/mocha.opts",
-    "test:debug": "./node_modules/.bin/karma start client/__tests__/karma.conf.js",
+    "test": "env NODE_PATH=$NODE_PATH:$PWD/client ./node_modules/.bin/mocha-webpack",
+    "test:debug": "webpack-dev-server --config webpack/test.js --hot --inline",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -55,13 +55,9 @@
     "flux-standard-action": "^0.6.0",
     "history": "^1.17.0",
     "imports-loader": "^0.6.5",
-    "karma": "^0.13.17",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-cli": "^0.1.2",
-    "karma-mocha": "^0.2.1",
-    "karma-webpack": "^1.7.0",
     "mocha": "^2.3.4",
+    "mocha-loader": "^0.7.1",
+    "mocha-webpack": "^0.1.0",
     "node-sass": "^3.4.2",
     "ramda": "^0.19.1",
     "react": "^0.14.5",
@@ -81,10 +77,11 @@
     "sass-lint": "^1.5.1",
     "sass-loader": "^3.1.2",
     "sasslint-loader": "0.0.1",
-    "style-loader": "^0.13.0",
+    "style-loader": "magalhas/style-loader#6ffa6df",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "1.14.0",
+    "webpack-node-externals": "^1.0.0",
     "whatwg-fetch": "^0.11.0"
   },
   "babel": {
