Rename testing webpack config files
Name the files so that they match the npm script used to run them
(`test.js` and `testDebug.js`)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
     "test": "env NODE_PATH=$NODE_PATH:$PWD/client ./node_modules/.bin/mocha-webpack",
-    "test:debug": "webpack-dev-server --config webpack/test.js --hot --inline",
+    "test:debug": "webpack-dev-server --config webpack/testDebug.js --hot --inline",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
