Run npm prune in postinstall
After installing packages, we now also prune any obsolete packages.
This does several things:

* Ensures that we don’t build up cruft in our `node_modules` directory
* Ensures that we’re not accidentally depending on things that we’re
not specifying
* Potentially helps with failing builds on CI

In order to test this, I needed to resolve an unresolved peer
dependency issue with react-router-named-routes; the latest version
(0.0.9) of that fixes that issue.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_ENV=production ./node_modules/.bin/webpack",
     "dev": "webpack-dev-server --devtool eval --progress --colors --hot --history-api-fallback",
     "lint": "eslint 'client/**/*.js' && sass-lint -v",
-    "postinstall": "npm run build",
+    "postinstall": "npm prune && npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha-webpack",
     "test:debug": "NODE_ENV=test-debug webpack-dev-server --hot --inline",
@@ -68,7 +68,7 @@
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0",
-    "react-router-named-routes": "0.0.8",
+    "react-router-named-routes": "0.0.9",
     "react-router-redux": "^4.0.0",
     "redux": "^3.1.0",
     "redux-api-middleware": "^1.0.0-beta3",
