--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.4.1",
+    "chai-as-promised": "^5.3.0",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.0.2",
@@ -77,6 +78,7 @@
     "sass-lint": "^1.5.1",
     "sass-loader": "^3.1.2",
     "sasslint-loader": "0.0.1",
+    "sinon": "^2.0.0-pre",
     "style-loader": "magalhas/style-loader#6ffa6df",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
