--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "flux-standard-action": "^0.6.0",
     "foundation-apps": "^1.2.0",
     "history": "^1.17.0",
+    "humps": "^1.0.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
     "mocha": "^2.3.4",
@@ -79,6 +80,7 @@
     "sass-loader": "^3.1.2",
     "sasslint-loader": "0.0.1",
     "sinon": "^2.0.0-pre",
+    "sinon-chai": "sjmulder/sinon-chai#pr/sinon-2.0.0-pre",
     "style-loader": "magalhas/style-loader#6ffa6df",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
