--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production ./node_modules/.bin/webpack",
     "dev": "webpack-dev-server --devtool eval --progress --colors --hot --history-api-fallback",
-    "lint": "eslint 'client/**/*.js' && sass-lint -v",
+    "lint": "NODE_ENV=production eslint 'client/**/*.js' && sass-lint -v",
     "postinstall": "npm prune && npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha-webpack",
