--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "redux-thunk": "^1.0.3",
     "sass-lint": "^1.5.1",
     "sass-loader": "^3.1.2",
-    "sasslint-loader": "0.0.1",
+    "sasslint-webpack-plugin": "^1.0.2",
     "sinon": "^2.0.0-pre",
     "sinon-chai": "sjmulder/sinon-chai#pr/sinon-2.0.0-pre",
     "style-loader": "^0.13.1",
