--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "sasslint-webpack-plugin": "^1.0.2",
     "sinon": "^2.0.0-pre",
     "sinon-chai": "sjmulder/sinon-chai#pr/sinon-2.0.0-pre",
+    "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
