Upgrade to latest eslint-config-zeal and peers
No new lint rule failures!

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "private": true,
   "dependencies": {
     "babel-core": "^6.9.0",
-    "babel-eslint": "^6.0.0-beta.6",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
@@ -41,12 +41,12 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.0.2",
-    "eslint": "^2.4.0",
-    "eslint-config-zeal": "^0.6.0",
-    "eslint-import-resolver-webpack": "^0.1.5",
+    "eslint": "^2.10.2",
+    "eslint-config-zeal": "^0.7.0",
+    "eslint-import-resolver-webpack": "^0.2.5",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-import": "^1.1.0",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-react": "^5.1.1",
     "expect-react-shallow": "^1.1.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
