--- a/package.json
+++ b/package.json
@@ -67,10 +67,10 @@
     "react-css-modules": "^3.6.3",
     "react-dom": "^0.14.5",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.0.6",
-    "react-router": "^2.0.0",
+    "react-redux": "=4.4.3",
+    "react-router": "^2.4.0",
     "react-router-named-routes": "0.0.9",
-    "react-router-redux": "^4.0.0",
+    "react-router-redux": "^4.0.4",
     "redux": "^3.1.0",
     "redux-api-middleware": "^1.0.0-beta3",
     "redux-form": "^4.1.2",
