--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react-router-named-routes": "0.0.9",
     "react-router-redux": "^4.0.5",
     "redux": "^3.1.0",
-    "redux-api-middleware": "^1.0.0-beta3",
+    "redux-api-middleware": "^1.0.2",
     "redux-form": "^4.1.2",
     "redux-thunk": "^1.0.3",
     "sass-lint": "^1.7.0",
