--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "1.14.0",
-    "whatwg-fetch": "^0.11.0"
+    "webpack-dev-server": "1.14.0"
   },
   "babel": {
     "presets": [
