--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha-webpack",
     "test:debug": "NODE_ENV=test-debug webpack-dev-server --hot --inline",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "npm run test -- --watch --reporter min",
     "validate": "npm-run-all --parallel test lint"
   },
   "repository": {
