--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "NODE_ENV=production eslint 'client/**/*.js' --max-warnings 0 && sass-lint -v --max-warnings 0",
     "postinstall": "npm prune && npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha-webpack",
+    "test": "NODE_ENV=test mocha-webpack",
     "test:debug": "NODE_ENV=test-debug webpack-dev-server --hot --inline",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "coverage": "NODE_ENV=test nyc --reporter=lcov npm run test"
   },
   "repository": {
     "type": "git",
@@ -92,7 +93,15 @@
       "stage-0"
     ],
     "plugins": [
-      "transform-decorators-legacy"
+      "transform-decorators-legacy",
+      "__coverage__"
     ]
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false
+  },
+  "devDependencies": {
+    "babel-plugin-__coverage__": "^11.0.0"
   }
 }
