--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "json-loader": "^0.5.4",
     "karma": "^1.1.0",
     "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^1.0.1",
     "karma-mocha": "^1.1.1",
     "karma-webpack": "^1.7.0",
