--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "sass-lint": "^1.8.0",
     "sass-loader": "^3.2.0",
     "sasslint-webpack-plugin": "^1.0.3",
-    "sinon": "^2.0.0-pre",
+    "sinon": "=2.0.0-pre",
     "sinon-chai": "sjmulder/sinon-chai#pr/sinon-2.0.0-pre",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
