--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint:sass": "NODE_ENV=production sass-lint -v --max-warnings 0",
     "postinstall": "npm prune && npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
-    "coverage": "NODE_ENV=test nyc --reporter=lcov npm run test",
     "test": "NODE_ENV=test karma start",
     "test:watch": "npm test -- --auto-watch --no-single-run",
     "validate": "npm-run-all --parallel test lint"
@@ -99,15 +98,7 @@
       "stage-0"
     ],
     "plugins": [
-      "transform-decorators-legacy",
-      "__coverage__"
+      "transform-decorators-legacy"
     ]
-  },
-  "nyc": {
-    "sourceMap": false,
-    "instrument": false
-  },
-  "devDependencies": {
-    "babel-plugin-__coverage__": "^11.0.0"
   }
 }
