Use karma-testdouble
karma-testdouble adds testdouble.js as a Karma framework, making the
`td` object globally available.

This forces us to add `td` as a global in our testing eslint configs,
which is less awesome.

It’s probably worth adding a `zeal/testdouble` extension to
eslint-config-zeal for this.

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^1.0.1",
     "karma-mocha": "^1.1.1",
+    "karma-testdouble": "^1.0.2",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.7.0",
