--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "npm prune && npm run build",
     "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
     "test": "karma start",
-    "test:watch": "npm test -- --auto-watch --no-single-run",
+    "test:watch": "npm test -- --auto-watch --no-single-run --reporters progress",
     "validate": "npm-run-all --parallel test lint"
   },
   "repository": {
