--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "4.4.5",
+    "react-redux": "=4.4.3",
     "react-router": "^2.4.0",
     "react-router-named-routes": "0.0.12",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-api-middleware": "^1.0.2",
-    "redux-form": "^6.0.2",
+    "redux-form": "^5.3.3",
     "redux-thunk": "^2.1.0",
     "sass-lint": "^1.8.0",
     "sass-loader": "^4.0.1",
