Simply the starter app
The latest webpack-dev-server has a `—open` command line argument that
automatically opens a browser to show the app.

Also, renamed the `starter app` script to `start`, so that you can
simply run `npm start` to run the starter app.

Updated the README with the new instructions.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:js": "NODE_ENV=production eslint 'client/**/*.js' --max-warnings 0",
     "lint:sass": "NODE_ENV=production sass-lint -v --max-warnings 0",
     "postinstall": "npm prune && npm run build",
-    "starterapp": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback",
+    "start": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback --open",
     "test": "NODE_ENV=test karma start",
     "test:watch": "npm test -- --auto-watch --no-single-run --reporters progress",
     "validate": "npm-run-all --parallel test lint"
