--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "private": true,
   "dependencies": {
     "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
@@ -43,12 +43,12 @@
     "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "es6-promise": "^3.2.1",
-    "eslint": "^3.3.1",
+    "eslint": "^3.5.0",
     "eslint-config-zeal": "^0.11.0",
     "eslint-import-resolver-webpack": "^0.6.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-react": "^6.1.2",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-react": "randycoulman/eslint-plugin-react#fix-spread-props-in-no-children-prop",
     "expect-react-shallow": "^1.2.1",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
