--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
   },
   "private": true,
   "dependencies": {
-    "babel-core": "^6.9.1",
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.4.1",
@@ -81,20 +81,25 @@
     "redux-form": "^6.0.5",
     "redux-thunk": "^2.1.0",
     "sass-lint": "^1.8.0",
-    "sass-loader": "^4.0.1",
-    "sasslint-webpack-plugin": "^1.0.3",
+    "sass-loader": "^4.0.2",
+    "sasslint-webpack-plugin": "^1.0.4",
     "style-loader": "^0.13.1",
     "testdouble": "^1.4.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "^1.13.2",
     "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "1.16.1"
+    "webpack-dev-server": "^1.16.1"
   },
   "babel": {
     "env": {
       "test": {
         "plugins": [
-          ["__coverage__", {"ignore": "**/*-spec.js"}]
+          [
+            "__coverage__",
+            {
+              "ignore": "**/*-spec.js"
+            }
+          ]
         ]
       }
     },
