Use opt-cli to make opt-out of hooks easy
To opt out of running the prepush hook, create a file named `.opt-out`
with the content `prepush`.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:js": "NODE_ENV=production eslint 'client/**/*.js' --max-warnings 0",
     "lint:sass": "NODE_ENV=production sass-lint -v --max-warnings 0",
     "postinstall": "npm prune && npm run build",
-    "prepush": "npm run validate",
+    "prepush": "opt --out prepush --exec 'npm run validate'",
     "start": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback --open",
     "test": "NODE_ENV=test karma start",
     "test:watch": "npm test -- --auto-watch --no-single-run --reporters progress",
@@ -69,6 +69,7 @@
     "mocha": "^3.0.2",
     "node-sass": "^3.7.0",
     "npm-run-all": "^3.1.0",
+    "opt-cli": "^1.5.1",
     "ramda": "^0.22.1",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
