--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
     "classnames": "^2.2.5",
@@ -107,9 +107,9 @@
       }
     },
     "presets": [
+      "latest",
       "react",
-      "es2015",
-      "stage-0"
+      "stage-1"
     ],
     "plugins": [
       "transform-decorators-legacy"
