--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "es6-promise": "^4.0.3",
-    "eslint": "^3.7.0",
-    "eslint-config-zeal": "^0.12.0",
+    "eslint": "^3.7.1",
+    "eslint-config-zeal": "^0.12.1",
     "eslint-import-resolver-webpack": "^0.6.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-react": "yannickcr/eslint-plugin-react#f227eb4",
+    "eslint-plugin-react": "^6.4.0",
     "expect-react-shallow": "^1.2.1",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
