--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "file-loader": "^0.9.0",
     "flux-standard-action": "^0.6.0",
     "foundation-apps": "^1.2.0",
+    "history": "3.2.1",
     "humps": "^2.0.0",
     "husky": "^0.11.8",
     "imports-loader": "^0.6.5",
@@ -76,7 +77,6 @@
     "react-hot-loader": "^1.3.0",
     "react-redux": "=4.4.3",
     "react-router": "^3.0.0",
-    "react-router-named-routes": "0.0.12",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-api-middleware": "^1.0.2",
@@ -88,6 +88,7 @@
     "style-loader": "^0.13.1",
     "testdouble": "^1.7.0",
     "url-loader": "^0.5.7",
+    "use-named-routes": "^0.3.2",
     "webpack": "^1.13.2",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^1.16.1"
