--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "postinstall": "npm prune && npm run build",
     "prepush": "opt --out prepush --exec 'npm run validate'",
     "start": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback --open",
-    "test": "NODE_ENV=test karma start",
-    "test:watch": "npm test -- --auto-watch --no-single-run --reporters progress",
+    "test": "jest --notify --verbose --no-cache",
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage",
     "validate": "npm-run-all --parallel test lint"
   },
   "repository": {
@@ -39,8 +40,6 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^6.0.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "es6-promise": "^4.0.3",
@@ -60,12 +59,6 @@
     "husky": "^0.11.8",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.2.0",
-    "karma-webpack": "^1.8.0",
-    "mocha": "^3.1.0",
     "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.0",
     "opt-cli": "^1.5.1",
@@ -92,19 +85,28 @@
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^1.16.1"
   },
-  "babel": {
-    "env": {
-      "test": {
-        "plugins": [
-          [
-            "__coverage__",
-            {
-              "ignore": "**/*-spec.js"
-            }
-          ]
-        ]
-      }
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss)$": "identity-obj-proxy"
     },
+    "modulePaths": [
+      "<rootDir>/client/"
+    ],
+    "coverageReporters": [
+      "text"
+    ],
+    "collectCoverageFrom": [
+      "**/client/**/*.js",
+      "!**/client/**/*-spec.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/public/"
+    ],
+    "setupTestFrameworkScriptFile": "<rootDir>/client/test/specHelper.js"
+  },
+  "babel": {
     "presets": [
       "latest",
       "react",
@@ -115,9 +117,9 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-__coverage__": "^11.0.0",
-    "istanbul": "^0.4.5",
-    "karma-coverage": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.0"
+    "babel-jest": "^17.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^17.0.0",
+    "react-test-renderer": "^15.3.2"
   }
 }
