--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-api-middleware": "^1.0.2",
+    "redux-devtools-extension": "^1.0.0",
     "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0",
     "sass-lint": "^1.10.2",
