--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "npm-run-all": "^3.1.1",
     "opt-cli": "^1.5.1",
     "ramda": "^0.22.1",
-    "react": "=15.3.2",
-    "react-addons-test-utils": "=15.3.2",
-    "react-dom": "=15.3.2",
-    "react-hot-loader": "^1.3.0",
+    "react": "^15.4.0",
+    "react-addons-test-utils": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.4",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
@@ -112,6 +112,7 @@
       "stage-1"
     ],
     "plugins": [
+      "react-hot-loader/babel",
       "transform-decorators-legacy",
       "transform-runtime"
     ]
