--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "private": true,
   "dependencies": {
     "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.7",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.8",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.16.0",
@@ -44,7 +44,7 @@
     "babel-preset-stage-1": "^6.16.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
-    "eslint": "^3.10.0",
+    "eslint": "^3.10.2",
     "eslint-config-zeal": "^0.13.0",
     "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-loader": "^1.6.1",
@@ -61,13 +61,13 @@
     "husky": "^0.11.9",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.11.2",
+    "node-sass": "^3.13.0",
     "npm-run-all": "^3.1.1",
     "opt-cli": "^1.5.1",
     "ramda": "^0.22.1",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "=15.3.2",
+    "react-addons-test-utils": "=15.3.2",
+    "react-dom": "=15.3.2",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.4",
     "react-router": "^3.0.0",
@@ -120,6 +120,6 @@
     "babel-jest": "^17.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^17.0.0",
-    "react-test-renderer": "^15.3.2"
+    "react-test-renderer": "=15.3.2"
   }
 }
