--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "=4.4.3",
+    "react-redux": "^4.4.4",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
