Update tests with async await
- Add babel polyfill for async support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,6 @@
     "import/resolver": "webpack"
   },
   "rules": {
-    "import/extensions": "off"
+    "import/extensions": ["warn", "never", { "scss": "always" }]
   }
 }
