--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     ],
     "plugins": [
       "transform-decorators-legacy",
-      ["transform-runtime", { "polyfill": true }]
+      "transform-runtime"
     ]
   },
   "devDependencies": {
