--- a/circle.yml
+++ b/circle.yml
@@ -4,4 +4,15 @@ machine:
       6.9.1
 test:
   override:
-    - npm run validate
+    - yarn validate
+dependencies:
+  pre:
+    # Install Yarn
+    - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+    - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq yarn
+  cache_directories:
+    - ~/.yarn-cache
+  override:
+    - yarn install
