--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:js": "NODE_ENV=production eslint 'client/**/*.js' --max-warnings 0",
     "lint:sass": "NODE_ENV=production sass-lint -v --max-warnings 0",
-    "postinstall": "yarn prune && yarn run build",
-    "prepush": "opt --out prepush --exec 'yarn run validate'",
+    "postinstall": "yarn build",
+    "prepush": "opt --out prepush --exec 'yarn validate'",
     "start": "webpack-dev-server --config webpack/starterApp.js --devtool eval --progress --colors --hot --history-api-fallback --open",
     "test": "jest",
     "test:watch": "yarn test -- --watch",
