--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "npm-run-all": "^3.1.1",
     "opt-cli": "^1.5.1",
     "ramda": "^0.22.1",
-    "react": "^15.4.0",
-    "react-addons-test-utils": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.4",
     "react-router": "^3.0.0",
@@ -121,6 +121,6 @@
     "babel-jest": "^17.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^17.0.0",
-    "react-test-renderer": "=15.3.2"
+    "react-test-renderer": "^15.4.1"
   }
 }
