--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "babel-preset-stage-1": "^6.16.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
-    "eslint": "^3.10.2",
-    "eslint-config-zeal": "^0.14.0",
+    "eslint": "^3.11.1",
+    "eslint-config-zeal": "^0.14.1",
     "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.6.0",
+    "eslint-plugin-react": "^6.7.1",
+    "eslint-plugin-react-native": "^2.2.0",
     "expect-react-shallow": "^1.2.1",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
